<resources>
    <string name="app_name">Fall Detector</string>
    <string name="emergency_contact">Emergency contact</string>
    <string name="phone_hint">+351 111111111</string>
    <string name="button_text">Manual Fall Alert</string>
    <string name="button_edit">Edit Profile</string>
    <string name="fall_message">Fall Alert! Your loved one may need your help.</string>

    <string name="discover">Get Paired Devices</string>
    <string name="none_paired">No devices paired</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="send">Send</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_not_connected">not connected</string>

    <string name="hello">Hello World, BioLibTestActivity!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_search_device">SearchDeviceActivity</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="btBluetoothSettings">Bluetooth Settings</string>

    <string name="title_activity_detect_fall">DetectFallActivity </string>
    <string name="btSettings">User Settings</string>
    <string name="biolib_developer">Developer</string>
    <string name="welcome_message">Welcome, %1$s!</string>


</resources>