<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#3498db"
    android:gravity="center">

    <TextView
        android:id="@+id/textWelcomePersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#800080"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWelcomePersonName"
        android:layout_centerHorizontal="true"
        android:text="@string/emergency_contact" />


    <EditText
        android:id="@+id/editTextPhone1"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="phoneNumber"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhone1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/button_text" />

    <Button
        android:id="@+id/btBluetoothSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonSendMessage"
        android:layout_marginTop="33dp"
        android:text="@string/btBluetoothSettings" />

    <Button
        android:id="@+id/btSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btBluetoothSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/btSettings" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btSettings"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="158dp"
        android:text="Edit Profile" />


</RelativeLayout>